--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,14 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "entity-core>=0.1.0"
+    "entity-core>=0.0.1",
+    "pydantic>=2.0.0"
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0.0",
+    "pytest-asyncio>=0.21.0",
     "black>=23.0.0",
     "ruff>=0.1.0",
 ]
